# aisdk_onednn

./: CMakeLists.txt  README.md  bm_model.cpp  main.cpp
Examples/: FLC.cpp  get_started.cpp
include/: aisdk.h
include/data/: tensor.hpp
include/env/: env.h
include/nn/: absrtactnn.hpp  nn.hpp
src/env/: env.cpp
